#############################################################################
##                          Library to build                               ##
#############################################################################

lib_LIBRARIES = libsz.a

CSOURCES = rice.c sz_api.c encoding.c

CHEADERS =  rice.h ricehdf.h szip_adpt.h szlib.h

libsz_a_SOURCES = $(CSOURCES)
include_HEADERS = $(CHEADERS)


